pages/style.css
 * {
   margin: 0;
   padding: 0;

 }

 body {
   font-family: 'Montserrat Alternates', sans-serif;
 }

 main {
   max-width: 1600px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: 0 auto;
 }

 a {
   color: #000;
   text-decoration: none;
 }

 .grid {
   display: grid;
 }

 .quotation-container {
   position: relative;
   display: flex;
   flex-direction: row;
   font-family: 'Roboto';
   margin: 10%;
   height: 600px;
   width: 90%;
   /* background-color: rgb(224, 224, 224); */
   border-radius: 40px;
   margin: 0 auto;
   margin-bottom: 120px;

 }

 .clickable-zone:hover {
   transition: scale .3s ease-out;
   scale: 1.03;
   background-color: rgba(0, 0, 0, 0.371);
 }

 .clickable-zone:hover p {
   transition: color .2s ease-out;
   color: #fff;
 }

 .clickable-zone {
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.171);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
   border-radius: 40px;
   width: 100%;
   height: 100%;
   position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
   opacity: 1;
   transition: opacity .5s ease-out;
 }

 .clickable-zone p {
   font-size: 24px;
   font-weight: 600;
   color: #000;
 }

 .remove-clickable-zone {
   /* display: none; */
   transition: opacity .5s ease-out;
   opacity: 0;
 }

 .img-container {
   margin: auto;
   width: 400px;
   height: 400px;
   display: flex;
   justify-content: center;
   /* align-items: center; */
 }

 .author {
   font-size: 30px;
   font-weight: 700;
 }

 .quotation {
   font-weight: 400;
 }

 .text-quotation-container {
   margin: auto;
   margin-left: 40px;
   width: auto;
 }

 .refresh-hidden {
   opacity: 0;
 }

 .refresh {
   opacity: 1;
   z-index: 2;
   width: 50px;
   height: 50px;
   background-color: white;
   position: absolute;
   border-radius: 15px;
   top: 20px;
   right: -19%;
   cursor: pointer;
   transition: width .2s ease-out;

 }

 .refresh:hover {
   /* right: -10%; */
   width: 100px;
   background-color: rgb(202, 202, 202);
 }

 .refresh::before:hover {
   width: 100px;
   background-color: grey;
 }

 .img-container img {
   filter: grayscale();
 }

 .first-container {
   height: 100%;
   margin: auto;
 }


 /* -----------------------------------Фоновые элементы--------------------------------- */
 .c1 {
   position: fixed;
   right: 50px;
   top: 576px;
   z-index: -100;
   width: 250px;
   height: 250px;
   background: linear-gradient(#6A2A88, #2d1871);
   filter: blur(5px);
   opacity: 0.7;
   -webkit-border-radius: 21% 79% 57% 43% / 23% 41% 59% 77%;
   -moz-border-radius: 21% 79% 57% 43% / 23% 41% 59% 77%;
   border-radius: 21% 79% 57% 43% / 23% 41% 59% 77%;
 }

 .c2 {
   position: fixed;
   left: 99px;
   top: 940px;
   z-index: -100;
   width: 200px;
   height: 200px;
   background: linear-gradient(100deg, #843984, #4d247f);
   filter: blur(5px);
   opacity: 0.7;
   -webkit-border-radius: 51% 49% 36% 64% / 57% 62% 38% 43%;
   -moz-border-radius: 51% 49% 36% 64% / 57% 62% 38% 43%;
   border-radius: 51% 49% 36% 64% / 57% 62% 38% 43%;
 }

 .c3 {
   position: fixed;
   left: 1602px;
   top: 140px;
   z-index: 10;
   width: 100px;
   height: 100px;
   background: linear-gradient(90deg, #883c84, #532480);
   filter: blur(1px);
   -webkit-border-radius: 40% 60% 61% 39% / 56% 37% 63% 44%;
   -moz-border-radius: 40% 60% 61% 39% / 56% 37% 63% 44%;
   border-radius: 40% 60% 61% 39% / 56% 37% 63% 44%;
 }

 .c4 {
   position: fixed;
   left: 212px;
   top: 600px;
   z-index: 10;
   width: 100px;
   height: 100px;
   background: linear-gradient(130deg, #974382, #c24fa4);
   filter: blur(1px);
   -webkit-border-radius: 49% 51% 57% 43% / 44% 46% 54% 56%;
   -moz-border-radius: 49% 51% 57% 43% / 44% 46% 54% 56%;
   border-radius: 49% 51% 57% 43% / 44% 46% 54% 56%;
 }

 .c5 {
   position: fixed;
   right: 300px;
   top: 1000px;
   z-index: -100;
   width: 400px;
   height: 400px;
   background: linear-gradient(100deg, #843984, #4d247f);
   filter: blur(5px);
   opacity: 0.7;
   -webkit-border-radius: 49% 51% 57% 43% / 44% 46% 54% 56%;
   -moz-border-radius: 49% 51% 57% 43% / 44% 46% 54% 56%;
   border-radius: 49% 51% 57% 43% / 44% 46% 54% 56%;
 }

 .c6 {
   position: fixed;
   left: -100px;
   top: 0px;
   z-index: -100;
   width: 400px;
   height: 400px;
   background: linear-gradient(130deg, #974382, #c24fa4);
   filter: blur(3px);
   -webkit-border-radius: 49% 51% 57% 43% / 44% 46% 54% 56%;
   -moz-border-radius: 49% 51% 57% 43% / 44% 46% 54% 56%;
   border-radius: 49% 51% 57% 43% / 44% 46% 54% 56%;
 }

 /* --------------------------------Хедер------------------------------ */

 .header {
   /* height: 70px; */
   width: 100%;
   background-color: #000;
   z-index: 10;
   margin-bottom: 70px;
 }

 .header-wapper {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }

 .logo-container {
   max-width: 70px;
   margin: 20px 0;
 }

 .img-logo {
   width: 100%;
   height: 100%;
 }

 .img-logo:hover {
   opacity: 0.5;
   transition: .3s;
 }

 .ul-menu {
   display: flex;
 }

 .menu-item {
   list-style-type: none;
   padding: 0 20px;
 }

 .menu-item:hover {
   transition: 0.5s;
   padding: 0 21px;
   scale: 1.04;
 }

 .ul-font {
   letter-spacing: 1px;
   font-family: 'proxima-nova', sans-serif;
   font-weight: 800;
   font-size: 24px;
   color: #fff;
   text-decoration: none;
 }

 .ul-font:hover {
   color: rgb(184, 184, 184);
   transition: color .4s ease-out;
 }


 /* ----------------------------------2-------------------------- */
 .second-container {
   z-index: 11;
   display: flex;
   flex-direction: column;
   height: auto;
   /* background-color: rgba(255, 255, 255, 0.233); */
   backdrop-filter: blur(10px);
   width: 100%;
 }

 .content {
   margin-bottom: 6vh;
 }

 .content-title {
   font-size: 36px;
   font-weight: 500;
   margin-bottom: 3vh;
 }

 .title-end {
   text-align: end;
 }

 /* -----------------------------3---------------------------- */
 .third-cont-button {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin-bottom: 6vh;
 }

 .choose-button {
   margin: 10px;
   background-color: rgba(0, 0, 0, 0.171);
   backdrop-filter: blur(20px);
   height: 200px;
   width: auto;
   border-radius: 3vh;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #000;
   font-size: 24px;
 }

 .choose-button:hover {
   transition: scale .3s ease-out;
   scale: 1.03;
   background-color: rgba(0, 0, 0, 0.371);
   color: #fff;
 }

 .third-container {
   backdrop-filter: blur(10px);
   display: flex;
   flex-direction: column;
 }

 .answer-button {
   width: 80%;
   height: 1000px;
   border-radius: 3vh;
   background-color: rgba(0, 0, 0, 0.371);
   margin: 0 auto;
 }

 .active-choose {
   background-color: rgb(44, 44, 44) !important;
   color: #fff;
 }

 .list-container {
   font-family: 'Courier New', Courier, monospace;
   width: 80%;
   margin: 0 auto;
   backdrop-filter: blur(10px);
   z-index: 11;
 }

 .list-container__title {
   font-size: 28px;
   font-weight: 700;
   display: inline-block;
   margin: 20px 0;
 }

 .list-container li {
   margin-bottom: 15px;
   font-size: 16px;
 }

 .list-container li:hover {
   scale: 1.02;
   transition: scale 0.3s;
   text-decoration: underline;
 }


 @media(max-width:750px) {
   .quotation-container {
     flex-direction: column;
     min-height: 70vh;
   }

   .first-container {
     min-height: auto;
   }

   .img-container {
     height: auto;
     width: 80%;
     margin: 30px auto;
   }

   .img-container img {
     height: 300px;
   }

   .c1 {
     right: -96px;
   }

   .c4 {
     top: 850px;
     left: 70px;
   }

   .c6 {
     left: -231px;
   }

   .quotation-container {
     margin-bottom: 70px;
   }

   .text-quotation-container {
     margin-left: 0;
   }

   .clickable-zone p {
     text-align: center;
     margin: 0 20px;
   }

   main {
     padding: 0 20px;
   }
   .navigation-menu{
    display: none;
   }
   body{
    overflow-x: hidden;
   }


 }

